tests/miniJava/neg/006822_mutation.MiniJava
class public java { public static void Main ( String [ ] java ) { { } } }
